--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@google/genai": "^1.0.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "telegraf": "^4.16.3"
+  "@google/genai": "^1.0.0",
+  "dotenv": "^16.4.5",
+  "express": "^4.18.2",
+  "telegraf": "^4.16.3",
+  "node-fetch": "^3.3.2"
   },
   "engines": {
     "node": ">=20.0.0"
