--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "gemini-telegram-bot",
+  "name": "afghan-connect-bot",
   "version": "1.0.0",
-  "description": "Telegram bot using Gemini 2.0 SDK",
+  "description": "Afghan Chat Bot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-  "@google/genai": "^1.0.0",
-  "dotenv": "^16.4.5",
-  "express": "^4.18.2",
-  "telegraf": "^4.16.3",
-  "node-fetch": "^3.3.2"
-  },
-  "engines": {
-    "node": ">=20.0.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3",
+    "telegraf": "^4.12.2"
   }
 }
